--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,12 +4,22 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "node": "^22.7.0"
+    "firebase": "^10.13.1",
+    "firebase-admin": "^12.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "node": "^22.7.0",
+    "nodemon": "^3.1.4"
   }
 }
